Fixed bug where scroll doesn't happen on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    pointer-events: none;
+    pointer-events: auto;
     width: 50%;
 }
 
